# AIHWS-Project

./: .gitignore  README.md  autocorrelation_analysis.ipynb  baseline.ipynb  baseline.py  config.py  label_encoder.joblib  main.ipynb  main.py  main_ireland.py  minority_analysis.ipynb  pyproject.toml  scaler.joblib  wqi_model.keras
src/: autocorr_check.py  autocorrelation_analysis.ipynb  autocorrelation_analysis.py  china_eval.ipynb  china_eval.py  export_stations.py  geocode_bulk.py  geocode_map.ipynb  geocode_map.py  main_ireland.ipynb  minority_analysis.ipynb  validation_study.ipynb  validation_study.py
static/: ireland_stations_geocode_bulk.csv
test_data/: China_dataset_test.csv  England_dataset_test.csv  Ireland_dataset_test.csv  USA_dataset_test.csv
